--- a/tenant/pranaliving.html
+++ b/tenant/pranaliving.html
@@ -111,6 +111,19 @@ www.4happy-studio.com -->
   background-size: cover; 
   padding-bottom: 200px;
 }
+.carousel-caption {
+width:200px;
+font-size: 12px;
+z-index:10;
+color:#fff;
+text-align:center;
+top:40%;
+left:15%;
+bottom:auto;
+-webkit-transform:translate(0, -50%);
+-ms-transform:translate(0, -50%);
+transform:translate(0, -50%);
+}
 </style>
 
 
@@ -148,50 +161,120 @@ www.4happy-studio.com -->
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="/assets/img/Lina Sukijo/IMG_6532.png" alt="First slide">
-              <div class="carousel-caption d-none d-md-block">
+              <img class="d-block w-100" src="/assets/img/Prana Living/1 - MEGA MENDUNG (Kerudung Kantorng)_compressed.png" alt="First slide">
+              <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
                 <h5></h5>
                 <p></p>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="/assets/img/Lina Sukijo/IMG_6538.png" alt="Second slide">
-              <div class="carousel-caption d-none d-md-block">
+              <img class="d-block w-100" src="/assets/img/Prana Living/10 - MOTIF TORAJA (Pashmina Sahwl)_compressed.png" alt="Second slide">
+              <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
                 <h5></h5>
                 <p></p>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="/assets/img/Lina Sukijo/IMG_6542.png" alt="Third slide">
-              <div class="carousel-caption d-none d-md-block">
+              <img class="d-block w-100" src="/assets/img/Prana Living/11 - AL HAMBRA (Outer)_compressed.png" alt="Third slide">
+              <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
                 <h5></h5>
                 <p></p>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="/assets/img/Lina Sukijo/IMG_6549.png" alt="Fourth slide">
-              <div class="carousel-caption d-none d-md-block">
+              <img class="d-block w-100" src="/assets/img/Prana Living/12 - GONGGONG KEPRI (Outer)_compressed.png" alt="Fourth slide">
+              <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
                 <h5></h5>
                 <p></p>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="/assets/img/Lina Sukijo/IMG_6553.png" alt="Five slide">
-              <div class="carousel-caption d-none d-md-block">
+              <img class="d-block w-100" src="/assets/img/Prana Living/13 - MEGAMENDUNG (Outer)_compressed.png" alt="Five slide">
+              <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
                 <h5></h5>
                 <p></p>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="/assets/img/Lina Sukijo/IMG_6561.png" alt="Six slide">
-              <div class="carousel-caption d-none d-md-block">
+              <img class="d-block w-100" src="/assets/img/Prana Living/14 - TORAJA (Outer)_compressed.png" alt="Six slide">
+              <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
                 <h5></h5>
                 <p></p>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="/assets/img/Lina Sukijo/IMG_6563.png" alt="Seven slide">
-              <div class="carousel-caption d-none d-md-block">
+              <img class="d-block w-100" src="/assets/img/Prana Living/15 - TORAJA (Outer)__compressed.png" alt="Seven slide">
+              <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
+                <h5></h5>
+                <p></p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="/assets/img/Prana Living/2 - BUNGA TEH (Kerudung Kantong)_compressed.png" alt="Seven slide">
+              <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
+                <h5></h5>
+                <p></p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="/assets/img/Prana Living/3 - AL HAMBRA (Pashmina Sahwl)_compressed.png" alt="Seven slide">
+              <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
+                <h5></h5>
+                <p></p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="/assets/img/Prana Living/4 - BUNGA TEH (Pashmina Sahwl)_compressed.png" alt="Seven slide">
+              <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
+                <h5></h5>
+                <p></p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="/assets/img/Prana Living/5 - GONGGONG KEPRI MOTIF BAWAH (Pashmina)_compressed.png" alt="Seven slide">
+              <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
+                <h5></h5>
+                <p></p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="/assets/img/Prana Living/6 - GONGGONG KEPRI MOTIF SAMPING (Pashmina Sahwl)_compressed.png" alt="Seven slide">
+              <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
+                <h5></h5>
+                <p></p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="/assets/img/Prana Living/7 - MEGA MENDUNG (Kerudung Kantong)_compressed.png" alt="Seven slide">
+              <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
+                <h5></h5>
+                <p></p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="/assets/img/Prana Living/8 - MOTIF MINI TORAJA (Pashmina Sahwl)_compressed.png" alt="Seven slide">
+              <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
+                <h5></h5>
+                <p></p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="/assets/img/Prana Living/9 - MEGA MENDUNG MOTIF SAMPING (Pashmina Sahwl)_compressed.png" alt="Seven slide">
+              <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
+                <h5></h5>
+                <p></p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="/assets/img/Prana Living/IMG_6623_compressed.png" alt="Seven slide">
+              <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
+                <h5></h5>
+                <p></p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="/assets/img/Prana Living/IMG_6625_compressed.png" alt="Seven slide">
+              <div class="carousel-caption" style="text-size-adjust: 8px; padding-top: 200px;">
                 <h5></h5>
                 <p></p>
               </div>
@@ -207,8 +290,8 @@ www.4happy-studio.com -->
           </a>
         </div>
         
-        <p style="padding-top: 20px;" class="card-text">Madinah Hijab Syar’i Premium</p>
-        <a href="#" class="btn btn-warning">Beli Disini</a>
+        <p style="padding-top: 20px;" class="card-text">Prana Living dengan Line Fashion Putri Anjani (pa.) merupakan karya inspiratif kekayaan budaya Indonesia yang dipadukan dalam bordir halus sebagai ciri khas produk unggulan</p>
+        <a href="https://www.etsy.com/shop/PranaLivingshop" class="btn btn-warning">Beli Disini</a>
         <a href="#" class="btn btn-success">Whatsapp</a>
       </div>
       <div class="card-footer text-muted">
