--- a/tenant/naluna.html
+++ b/tenant/naluna.html
@@ -207,7 +207,7 @@ transform:translate(0, -50%);
         </div>
         
         <p style="padding-top: 20px;" class="card-text">Naluna Style</p>
-        <a href="https://shopee.co.id/nalunastyle?v=924&smtt=0.0.3" class="btn btn-warning">Beli Disini</a>
+        <a href="https://shopee.co.id/nalunastyle?v=924&smtt=0.0.3" class="btn btn-warning" target="_blank">Beli Disini</a>
         <a href="#" class="btn btn-success">Whatsapp</a>
       </div>
       <div class="card-footer text-muted">
