--- a/tenant/rumahtenun.html
+++ b/tenant/rumahtenun.html
@@ -249,7 +249,7 @@ transform:translate(0, -50%);
         </div>
         
         <p style="padding-top: 20px;" class="card-text">Rumah Tenun & Batik Arios</p>
-        <a href="http://shopee.co.id/arios10" class="btn btn-warning">Beli Disini</a>
+        <a href="http://shopee.co.id/arios10" class="btn btn-warning" target="_blank">Beli Disini</a>
         <a href="#" class="btn btn-success">Whatsapp</a>
       </div>
       <div class="card-footer text-muted">
