--- a/tenant/pranaliving.html
+++ b/tenant/pranaliving.html
@@ -291,7 +291,7 @@ transform:translate(0, -50%);
         </div>
         
         <p style="padding-top: 20px;" class="card-text">Prana Living dengan Line Fashion Putri Anjani (pa.) merupakan karya inspiratif kekayaan budaya Indonesia yang dipadukan dalam bordir halus sebagai ciri khas produk unggulan</p>
-        <a href="https://www.etsy.com/shop/PranaLivingshop" class="btn btn-warning">Beli Disini</a>
+        <a href="https://www.etsy.com/shop/PranaLivingshop" class="btn btn-warning" target="_blank">Beli Disini</a>
         <a href="#" class="btn btn-success">Whatsapp</a>
       </div>
       <div class="card-footer text-muted">
